@@ -1,5 +1,5 @@
 dnl # emacs edit mode for this file is -*- sh -*-
-dnl # $Id: configure.in,v 1.25 2000-04-27 10:07:30 obachman Exp $
+dnl # $Id: configure.in,v 1.26 2000-09-04 13:31:28 obachman Exp $
 
 dnl #
 dnl # configure.in - process this file with `autoconf' to generate
@@ -12,7 +12,7 @@ dnl #
 #
 # - initialisation.
 #
-AC_REVISION($Id: configure.in,v 1.25 2000-04-27 10:07:30 obachman Exp $)
+AC_REVISION($Id: configure.in,v 1.26 2000-09-04 13:31:28 obachman Exp $)
 AC_INIT(canonicalform.cc)
 AC_CONFIG_HEADER(config.h)
 AC_CONFIG_AUX_DIR(bin)
@@ -43,6 +43,9 @@ AC_ARG_WITH(
 
 # font-lock-trick: '
 
+AC_ARG_WITH(
+  omalloc,
+  [  --with-omalloc           build for use with omalloc])
 AC_ARG_WITH(
   gmp,
   [  --with-gmp(=<gmp_inc_path>(,<gmp_lib_path>))
@@ -249,7 +252,7 @@ if test "x$gmp_in_installation" != xyes; then
     ])
 fi
 
-AC_CHECK_HEADERS(stdio.h stdlib.h string.h time.h math.h, ,
+AC_CHECK_HEADERS(stdio.h stdlib.h string.h time.h math.h omalloc.h, ,
   [ AC_MSG_ERROR(C header files not found) ])
 
 if test "x$enable_streamio" != xno; then
@@ -384,6 +387,34 @@ if test "x$gmp_in_installation" = xyes; then
   LDFLAGS="-L\$(libdir) -lgmp $LDFLAGS"
 fi
 
+AC_MSG_CHECKING(whether to use omalloc)
+
+if test "$with_omalloc" = yes; then
+  if test "$ac_cv_header_omalloc_h" != yes; then
+    if test "$enable_omalloc" = yes; then
+       AC_MSG_WARN(did not find omalloc.h, install before compiling)
+    else
+       with_omalloc=no
+    fi
+  fi
+else
+  if test "$with_omalloc" != no; then
+    if test "$enable_omalloc" = yes; then
+      if test "$ac_cv_header_omalloc_h" != yes; then
+        AC_MSG_WARN(did not find omalloc.h, install before compiling)
+      fi
+      with_omalloc=yes
+    else
+      with_omalloc=no
+    fi
+  fi
+fi
+if test "$with_omalloc" = yes; then
+  AC_DEFINE(HAVE_OMALLOC)
+  with_memman=no 
+fi
+AC_MSG_RESULT($with_omalloc)
+    
 # memory manager
 if test "x$with_memman" != xno; then
   alltargets="$alltargets mem"
